# stable-of-manifold-foraging

./: README.md
codex/: forge-codex.txt  hanoi-deduplication.txt
docs/: guide-persona-model-agnostic.txt  temporal-governor.txt  the-looking-mirror-setup-ritual.txt
dual-rpg/: dual-rpg-forensic-prompt.txt  dual-rpg-invocation-prompt.txt  dual-rpg-kernal-lite-v1.txt  dual-rpg-test-20-turns.txt  dual-rpg-test-template-20-turns.txt  manifold-dual-layer-rpg-12-codex.txt  manifold-rpg-thunk-layer-03-codex.txt  readme.md
games/: amanda-and-the-magic-shop.md  the-looking-mirror.md
shadow-field/: deployment.sh  docker-compose.yaml  dockerfile.dockerfile  prometheus.yaml  pyproject.toml  readme.md  shadow-field-file-structure.txt
shadow-field/api/: fastapi.py
shadow-field/core/: bridle.py  collector.py  field.py  system.py  tuner.py
shadow-field/extended/core/: system.py
shadow-field/extractors/: __init__.py  structural.py  system.py
shadow-field/integration/: __init__.py  model_surface.py  observability.py  stability_layer.py
shadow-field/notes/: live-integration-sketch.py  shadow-field-integration.txt
shadow-field/orchestrator/: game_loop.py  game_router.py
shadow-field/stalls/: manifold-shadow-field-bridle-codex.txt
shadow-field/tests/: test_invariants.py
stalls/: ande-lens-conceptual-alignment.txt  ande-lens-conceptual-projection.txt  ande-persona-system.txt  beat-pool-the-looking-mirror.txt  cross-model-visual-turn-codex.txt  engine-handoff-engine.txt  engine-harmonics-engine.txt  engine-memory-manager.txt  engine-physics-architecture.txt  (+24 more)
(+2 files in other folders)
